# curvemanager

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  curvemanager.sln  curvemanager.vcxproj  curvemanager.vcxproj.filters
curvemanager/curvemanager/: main.cpp
curvemanager/curvemanager.xcodeproj/: project.pbxproj
curvemanager/curvemanager.xcodeproj/project.xcworkspace/xcuserdata/josemelo.xcuserdatad/: UserInterfaceState.xcuserstate
curvemanager/curvemanager.xcodeproj/xcuserdata/josemelo.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: curvemanager.hpp  jsontoobject.hpp  marketstore.hpp  standalonemethods.hpp
include/curvemanager/: curvemanager.hpp  jsontoobject.hpp  marketstore.hpp
include/curvemanager/schemas/: all.hpp  curvebuilderrequest.hpp  discountfactorsrequest.hpp  forwardratesrequest.hpp  updatequoterequest.hpp  zeroratesrequest.hpp
json.schemas/: curvebuilder.request.schema.json  discountfactors.request.schema.json  forwardrates.request.schema.json  updatequote.request.schema.json  zerorates.request.schema.json
python/: CMakeLists.txt  module.cpp  pyproject.toml  setup.py
python/curvemanagerpython.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/json/: CLP_COLLUSD.json  ICP_ICAP.json  LIBOR3M.json  SOFR.json
python/notebooks/: CLP_COLLUSD.json  ICP_ICAP.json  INDEX_CLP_COLLUSD.json  INDEX_ICP_ICAP.json  INDEX_LIBOR12M.json  INDEX_LIBOR1M.json  INDEX_LIBOR3M.json  INDEX_LIBOR6M.json  INDEX_SOFR.json  INDEX_UF_COLLUSD.json  LIBOR12M.json  LIBOR1M.json  LIBOR3M.json  LIBOR6M.json  SOFR.json  UF_COLLUSD.json  configs.xlsx  curve_builder.ipynb  curve_configuration.ipynb  exportCurves.ipynb  testing.ipynb  utils.py
src/: curvemanager.cpp  jsontoobject.cpp  marketstore.cpp
src/schemas/: curvebuilderrequest.cpp  discountfactorsrequest.cpp  forwardratesrequest.cpp  updatequoterequest.cpp  zeroratesrequest.cpp
src/utils/: timer.hpp
tests/: CMakeLists.txt  discount.json  flatforward.json  main.cpp  pch.hpp  piecewise.json  piecewisefull.json  sofr.json  test.cpp  testrequest.cpp  tests.vcxproj  tests.vcxproj.filters
tests/json/: discount.json  flatforward.json  piecewise.json  piecewisefull.json  piecewisefull2.json  piecewisefull3.json  piecewisetwocurves.json
